// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`estimateMonthlyCost snapshots > b2b_saas (en) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "Control Plane $73/mo + Graviton nodes 3AZ",
          "max": 237,
          "min": 190,
          "name": "EKS Cluster",
        },
        {
          "desc": "Up to 70% savings with Spot mix",
          "max": 0,
          "min": 0,
          "name": "Karpenter Dynamic Node Provisioning",
        },
        {
          "desc": "1x t3.medium instance",
          "max": 50,
          "min": 30,
          "name": "ArgoCD (EC2)",
        },
        {
          "desc": "Based on LCU",
          "max": 50,
          "min": 20,
          "name": "ALB (Application Load Balancer)",
        },
        {
          "desc": "Standard $25/1M transitions, Express $1/1M",
          "max": 20,
          "min": 5,
          "name": "Step Functions",
        },
      ],
      "name": "Compute",
      "total": {
        "max": 357,
        "min": 245,
      },
    },
    {
      "items": [
        {
          "desc": "min 0.5 ~ max 8 ACU",
          "max": 130,
          "min": 78,
          "name": "Aurora Serverless v2",
        },
        {
          "desc": "Reader instance for read distribution",
          "max": 130,
          "min": 104,
          "name": "Aurora Read Replica",
        },
        {
          "desc": "Based on Aurora I/O-Optimized",
          "max": 60,
          "min": 20,
          "name": "Aurora Storage + I/O",
        },
        {
          "desc": "3AZ Replication Group",
          "max": 94,
          "min": 78,
          "name": "ElastiCache Valkey/Redis",
        },
        {
          "desc": "r6g.large × 3",
          "max": 300,
          "min": 150,
          "name": "OpenSearch",
        },
      ],
      "name": "Database",
      "total": {
        "max": 714,
        "min": 430,
      },
    },
    {
      "items": [
        {
          "desc": "$0.059/hr + data processing charges",
          "max": 174,
          "min": 129,
          "name": "NAT Gateway (3)",
        },
        {
          "desc": "Internet outbound, first 1GB free",
          "max": 20,
          "min": 5,
          "name": "Data Transfer (outbound)",
        },
      ],
      "name": "Network",
      "total": {
        "max": 194,
        "min": 134,
      },
    },
    {
      "items": [
        {
          "desc": "Data transfer + per-request charges",
          "max": 30,
          "min": 5,
          "name": "CloudFront",
        },
        {
          "desc": "$5/mo + rule/request charges",
          "max": 30,
          "min": 20,
          "name": "WAF Web ACL",
        },
      ],
      "name": "Edge",
      "total": {
        "max": 60,
        "min": 25,
      },
    },
    {
      "items": [
        {
          "desc": "Storage + requests + data transfer",
          "max": 20,
          "min": 5,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
      ],
      "name": "Storage",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "First 1M free, then $0.4/1M",
          "max": 5,
          "min": 0,
          "name": "SQS",
        },
        {
          "desc": "$1/1M events",
          "max": 10,
          "min": 0,
          "name": "EventBridge",
        },
      ],
      "name": "Messaging",
      "total": {
        "max": 15,
        "min": 0,
      },
    },
    {
      "items": [
        {
          "desc": "Included by default, detailed monitoring extra",
          "max": 30,
          "min": 10,
          "name": "CloudWatch (Logs + Metrics + Alarms)",
        },
        {
          "desc": "Metrics collection + dashboards",
          "max": 100,
          "min": 40,
          "name": "Amazon Managed Prometheus + Grafana",
        },
        {
          "desc": "Compliance / sensitive data monitoring",
          "max": 200,
          "min": 80,
          "name": "Security Hub + GuardDuty + Config",
        },
        {
          "desc": "Event logging + queries",
          "max": 60,
          "min": 20,
          "name": "CloudTrail (S3 storage)",
        },
        {
          "desc": "$0.10/GB/mo image storage + scanning",
          "max": 5,
          "min": 1,
          "name": "ECR (Container Registry)",
        },
        {
          "desc": "$0.01/instance/hr",
          "max": 15,
          "min": 10,
          "name": "Inspector",
        },
        {
          "desc": "First 1GB free, then $1/GB",
          "max": 5,
          "min": 0,
          "name": "Macie",
        },
      ],
      "name": "Operations",
      "total": {
        "max": 415,
        "min": 161,
      },
    },
  ],
  "hasCommit": true,
  "hasSpot": true,
  "totalMax": 1775,
  "totalMid": 1388,
  "totalMin": 1000,
}
`;

exports[`estimateMonthlyCost snapshots > b2b_saas (ko) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "Control Plane $73/월 + Graviton 노드 3AZ",
          "max": 237,
          "min": 190,
          "name": "EKS 클러스터",
        },
        {
          "desc": "Spot 혼합으로 최대 70% 절감",
          "max": 0,
          "min": 0,
          "name": "Karpenter 노드 동적 프로비저닝",
        },
        {
          "desc": "t3.medium 1대",
          "max": 50,
          "min": 30,
          "name": "ArgoCD (EC2)",
        },
        {
          "desc": "LCU 기준",
          "max": 50,
          "min": 20,
          "name": "ALB (Application Load Balancer)",
        },
        {
          "desc": "Standard $25/100만 전환, Express $1/100만",
          "max": 20,
          "min": 5,
          "name": "Step Functions",
        },
      ],
      "name": "컴퓨팅",
      "total": {
        "max": 357,
        "min": 245,
      },
    },
    {
      "items": [
        {
          "desc": "min 0.5 ~ max 8 ACU",
          "max": 130,
          "min": 78,
          "name": "Aurora Serverless v2",
        },
        {
          "desc": "읽기 분산용 리더 인스턴스",
          "max": 130,
          "min": 104,
          "name": "Aurora Read Replica",
        },
        {
          "desc": "Aurora I/O-Optimized 기준",
          "max": 60,
          "min": 20,
          "name": "Aurora 스토리지 + I/O",
        },
        {
          "desc": "3AZ Replication Group",
          "max": 94,
          "min": 78,
          "name": "ElastiCache Valkey/Redis",
        },
        {
          "desc": "r6g.large × 3",
          "max": 300,
          "min": 150,
          "name": "OpenSearch",
        },
      ],
      "name": "데이터베이스",
      "total": {
        "max": 714,
        "min": 430,
      },
    },
    {
      "items": [
        {
          "desc": "$0.059/시간 + 데이터 처리 비용",
          "max": 174,
          "min": 129,
          "name": "NAT Gateway (3개)",
        },
        {
          "desc": "인터넷 아웃바운드 첫 1GB 무료",
          "max": 20,
          "min": 5,
          "name": "데이터 전송 (outbound)",
        },
      ],
      "name": "네트워크",
      "total": {
        "max": 194,
        "min": 134,
      },
    },
    {
      "items": [
        {
          "desc": "데이터 전송 + 요청 건당",
          "max": 30,
          "min": 5,
          "name": "CloudFront",
        },
        {
          "desc": "$5/월 + 규칙/요청 비용",
          "max": 30,
          "min": 20,
          "name": "WAF Web ACL",
        },
      ],
      "name": "엣지",
      "total": {
        "max": 60,
        "min": 25,
      },
    },
    {
      "items": [
        {
          "desc": "저장 + 요청 + 데이터 전송",
          "max": 20,
          "min": 5,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
      ],
      "name": "스토리지",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "첫 1M 무료, 이후 $0.4/1M",
          "max": 5,
          "min": 0,
          "name": "SQS",
        },
        {
          "desc": "이벤트 건당 $1/1M",
          "max": 10,
          "min": 0,
          "name": "EventBridge",
        },
      ],
      "name": "메시징",
      "total": {
        "max": 15,
        "min": 0,
      },
    },
    {
      "items": [
        {
          "desc": "기본 포함, 상세 모니터링 추가",
          "max": 30,
          "min": 10,
          "name": "CloudWatch (로그+메트릭+알람)",
        },
        {
          "desc": "메트릭 수집 + 대시보드",
          "max": 100,
          "min": 40,
          "name": "Amazon Managed Prometheus + Grafana",
        },
        {
          "desc": "규정 준수 / 민감 데이터 모니터링",
          "max": 200,
          "min": 80,
          "name": "Security Hub + GuardDuty + Config",
        },
        {
          "desc": "이벤트 기록 + 쿼리",
          "max": 60,
          "min": 20,
          "name": "CloudTrail (S3 저장)",
        },
        {
          "desc": "$0.10/GB/월 이미지 저장 + 스캔",
          "max": 5,
          "min": 1,
          "name": "ECR (컨테이너 레지스트리)",
        },
        {
          "desc": "인스턴스당 $0.01/시간",
          "max": 15,
          "min": 10,
          "name": "Inspector",
        },
        {
          "desc": "첫 1GB 무료, 이후 $1/GB",
          "max": 5,
          "min": 0,
          "name": "Macie",
        },
      ],
      "name": "운영",
      "total": {
        "max": 415,
        "min": 161,
      },
    },
  ],
  "hasCommit": true,
  "hasSpot": true,
  "totalMax": 1775,
  "totalMid": 1388,
  "totalMin": 1000,
}
`;

exports[`estimateMonthlyCost snapshots > compliance (en) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "3AZ, CPU/memory based",
          "max": 328,
          "min": 234,
          "name": "ECS Fargate (ARM64)",
        },
        {
          "desc": "Based on LCU",
          "max": 150,
          "min": 60,
          "name": "ALB (Application Load Balancer)",
        },
        {
          "desc": "Standard $25/1M transitions, Express $1/1M",
          "max": 80,
          "min": 25,
          "name": "Step Functions",
        },
      ],
      "name": "Compute",
      "total": {
        "max": 558,
        "min": 319,
      },
    },
    {
      "items": [
        {
          "desc": "min 0.5 ~ max 64 ACU",
          "max": 260,
          "min": 156,
          "name": "Aurora Serverless v2",
        },
        {
          "desc": "Reader instance for read distribution",
          "max": 260,
          "min": 208,
          "name": "Aurora Read Replica",
        },
        {
          "desc": "Based on Aurora I/O-Optimized",
          "max": 200,
          "min": 80,
          "name": "Aurora Storage + I/O",
        },
        {
          "desc": "3AZ Replication Group",
          "max": 156,
          "min": 130,
          "name": "ElastiCache Valkey/Redis",
        },
        {
          "desc": "r6g.large × 3",
          "max": 800,
          "min": 400,
          "name": "OpenSearch",
        },
      ],
      "name": "Database",
      "total": {
        "max": 1676,
        "min": 974,
      },
    },
    {
      "items": [
        {
          "desc": "$0.059/hr + data processing charges",
          "max": 279,
          "min": 129,
          "name": "NAT Gateway (3)",
        },
        {
          "desc": "Internet outbound, first 1GB free",
          "max": 100,
          "min": 30,
          "name": "Data Transfer (outbound)",
        },
        {
          "desc": "4 Interface Endpoints ($7/each/mo)",
          "max": 40,
          "min": 28,
          "name": "VPC Interface Endpoints",
        },
      ],
      "name": "Network",
      "total": {
        "max": 419,
        "min": 187,
      },
    },
    {
      "items": [
        {
          "desc": "Data transfer + per-request charges",
          "max": 150,
          "min": 40,
          "name": "CloudFront",
        },
        {
          "desc": "$5/mo + rule/request charges",
          "max": 80,
          "min": 20,
          "name": "WAF Web ACL",
        },
        {
          "desc": "$10/mo + $1/1M requests",
          "max": 50,
          "min": 10,
          "name": "Bot Control",
        },
      ],
      "name": "Edge",
      "total": {
        "max": 280,
        "min": 70,
      },
    },
    {
      "items": [
        {
          "desc": "Storage + requests + data transfer",
          "max": 80,
          "min": 20,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
      ],
      "name": "Storage",
      "total": {
        "max": 80,
        "min": 20,
      },
    },
    {
      "items": [
        {
          "desc": "First 1M free, then $0.4/1M",
          "max": 20,
          "min": 0,
          "name": "SQS",
        },
      ],
      "name": "Messaging",
      "total": {
        "max": 20,
        "min": 0,
      },
    },
    {
      "items": [
        {
          "desc": "Included by default, detailed monitoring extra",
          "max": 80,
          "min": 25,
          "name": "CloudWatch (Logs + Metrics + Alarms)",
        },
        {
          "desc": "~$23/host/mo + APM add-on",
          "max": 760,
          "min": 460,
          "name": "Datadog (Infrastructure + APM)",
        },
        {
          "desc": "Traces $5/1M, sampling config recommended",
          "max": 25,
          "min": 10,
          "name": "AWS X-Ray (Distributed Tracing)",
        },
        {
          "desc": "Compliance / sensitive data monitoring",
          "max": 200,
          "min": 80,
          "name": "Security Hub + GuardDuty + Config",
        },
        {
          "desc": "Event logging + queries",
          "max": 60,
          "min": 20,
          "name": "CloudTrail (S3 storage)",
        },
        {
          "desc": "Per key usage + $1/key/mo",
          "max": 30,
          "min": 10,
          "name": "KMS CMK (per service)",
        },
        {
          "desc": "Full account auditing",
          "max": 80,
          "min": 30,
          "name": "Control Tower + AWS Config (Organization)",
        },
        {
          "desc": "First 50K MAU free, then $0.0055/MAU",
          "max": 0,
          "min": 0,
          "name": "Cognito User Pool",
        },
        {
          "desc": "$0.10/GB/mo image storage + scanning",
          "max": 10,
          "min": 1,
          "name": "ECR (Container Registry)",
        },
        {
          "desc": "$0.01/instance/hr",
          "max": 40,
          "min": 10,
          "name": "Inspector",
        },
        {
          "desc": "First 1GB free, then $1/GB",
          "max": 30,
          "min": 0,
          "name": "Macie",
        },
      ],
      "name": "Operations",
      "total": {
        "max": 1315,
        "min": 646,
      },
    },
    {
      "items": [
        {
          "desc": "DR region base infrastructure cost",
          "max": 1000,
          "min": 400,
          "name": "Replica Region Infrastructure",
        },
        {
          "desc": "Health checks + GlobalAccelerator",
          "max": 100,
          "min": 35,
          "name": "Route53 Health Checks + Global Accelerator",
        },
      ],
      "name": "Multi-Region",
      "total": {
        "max": 1100,
        "min": 435,
      },
    },
  ],
  "hasCommit": true,
  "hasSpot": false,
  "totalMax": 5448,
  "totalMid": 4050,
  "totalMin": 2651,
}
`;

exports[`estimateMonthlyCost snapshots > compliance (ko) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "3AZ, CPU/메모리 기준",
          "max": 328,
          "min": 234,
          "name": "ECS Fargate (ARM64)",
        },
        {
          "desc": "LCU 기준",
          "max": 150,
          "min": 60,
          "name": "ALB (Application Load Balancer)",
        },
        {
          "desc": "Standard $25/100만 전환, Express $1/100만",
          "max": 80,
          "min": 25,
          "name": "Step Functions",
        },
      ],
      "name": "컴퓨팅",
      "total": {
        "max": 558,
        "min": 319,
      },
    },
    {
      "items": [
        {
          "desc": "min 0.5 ~ max 64 ACU",
          "max": 260,
          "min": 156,
          "name": "Aurora Serverless v2",
        },
        {
          "desc": "읽기 분산용 리더 인스턴스",
          "max": 260,
          "min": 208,
          "name": "Aurora Read Replica",
        },
        {
          "desc": "Aurora I/O-Optimized 기준",
          "max": 200,
          "min": 80,
          "name": "Aurora 스토리지 + I/O",
        },
        {
          "desc": "3AZ Replication Group",
          "max": 156,
          "min": 130,
          "name": "ElastiCache Valkey/Redis",
        },
        {
          "desc": "r6g.large × 3",
          "max": 800,
          "min": 400,
          "name": "OpenSearch",
        },
      ],
      "name": "데이터베이스",
      "total": {
        "max": 1676,
        "min": 974,
      },
    },
    {
      "items": [
        {
          "desc": "$0.059/시간 + 데이터 처리 비용",
          "max": 279,
          "min": 129,
          "name": "NAT Gateway (3개)",
        },
        {
          "desc": "인터넷 아웃바운드 첫 1GB 무료",
          "max": 100,
          "min": 30,
          "name": "데이터 전송 (outbound)",
        },
        {
          "desc": "Interface Endpoint 4개 ($7/개/월)",
          "max": 40,
          "min": 28,
          "name": "VPC Interface Endpoints",
        },
      ],
      "name": "네트워크",
      "total": {
        "max": 419,
        "min": 187,
      },
    },
    {
      "items": [
        {
          "desc": "데이터 전송 + 요청 건당",
          "max": 150,
          "min": 40,
          "name": "CloudFront",
        },
        {
          "desc": "$5/월 + 규칙/요청 비용",
          "max": 80,
          "min": 20,
          "name": "WAF Web ACL",
        },
        {
          "desc": "$10/월 + $1/1M 요청",
          "max": 50,
          "min": 10,
          "name": "Bot Control",
        },
      ],
      "name": "엣지",
      "total": {
        "max": 280,
        "min": 70,
      },
    },
    {
      "items": [
        {
          "desc": "저장 + 요청 + 데이터 전송",
          "max": 80,
          "min": 20,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
      ],
      "name": "스토리지",
      "total": {
        "max": 80,
        "min": 20,
      },
    },
    {
      "items": [
        {
          "desc": "첫 1M 무료, 이후 $0.4/1M",
          "max": 20,
          "min": 0,
          "name": "SQS",
        },
      ],
      "name": "메시징",
      "total": {
        "max": 20,
        "min": 0,
      },
    },
    {
      "items": [
        {
          "desc": "기본 포함, 상세 모니터링 추가",
          "max": 80,
          "min": 25,
          "name": "CloudWatch (로그+메트릭+알람)",
        },
        {
          "desc": "호스트당 ~$23/월 + APM 추가",
          "max": 760,
          "min": 460,
          "name": "Datadog (Infrastructure + APM)",
        },
        {
          "desc": "추적 $5/백만 건, 샘플링 설정 권장",
          "max": 25,
          "min": 10,
          "name": "AWS X-Ray (분산 추적)",
        },
        {
          "desc": "규정 준수 / 민감 데이터 모니터링",
          "max": 200,
          "min": 80,
          "name": "Security Hub + GuardDuty + Config",
        },
        {
          "desc": "이벤트 기록 + 쿼리",
          "max": 60,
          "min": 20,
          "name": "CloudTrail (S3 저장)",
        },
        {
          "desc": "키 사용 건당 + 월 $1/키",
          "max": 30,
          "min": 10,
          "name": "KMS CMK (서비스별)",
        },
        {
          "desc": "전체 계정 감사",
          "max": 80,
          "min": 30,
          "name": "Control Tower + AWS Config (조직)",
        },
        {
          "desc": "첫 50K MAU 무료, 이후 $0.0055/MAU",
          "max": 0,
          "min": 0,
          "name": "Cognito User Pool",
        },
        {
          "desc": "$0.10/GB/월 이미지 저장 + 스캔",
          "max": 10,
          "min": 1,
          "name": "ECR (컨테이너 레지스트리)",
        },
        {
          "desc": "인스턴스당 $0.01/시간",
          "max": 40,
          "min": 10,
          "name": "Inspector",
        },
        {
          "desc": "첫 1GB 무료, 이후 $1/GB",
          "max": 30,
          "min": 0,
          "name": "Macie",
        },
      ],
      "name": "운영",
      "total": {
        "max": 1315,
        "min": 646,
      },
    },
    {
      "items": [
        {
          "desc": "DR 리전 기본 인프라 비용",
          "max": 1000,
          "min": 400,
          "name": "복제 리전 인프라",
        },
        {
          "desc": "헬스체크 + GlobalAccelerator",
          "max": 100,
          "min": 35,
          "name": "Route53 헬스체크 + 글로벌 가속",
        },
      ],
      "name": "멀티리전",
      "total": {
        "max": 1100,
        "min": 435,
      },
    },
  ],
  "hasCommit": true,
  "hasSpot": false,
  "totalMax": 5448,
  "totalMid": 4050,
  "totalMin": 2651,
}
`;

exports[`estimateMonthlyCost snapshots > data_pipeline (en) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "Based on 1M+ requests/mo (first 1M free)",
          "max": 15,
          "min": 0,
          "name": "Lambda Functions",
        },
        {
          "desc": "Based on HTTP API",
          "max": 20,
          "min": 5,
          "name": "API Gateway",
        },
        {
          "desc": "Standard $25/1M transitions, Express $1/1M",
          "max": 20,
          "min": 5,
          "name": "Step Functions",
        },
      ],
      "name": "Compute",
      "total": {
        "max": 55,
        "min": 10,
      },
    },
    {
      "items": [
        {
          "desc": "Billed per read/write request",
          "max": 40,
          "min": 10,
          "name": "DynamoDB (On-Demand)",
        },
        {
          "desc": "r6g.large × 2",
          "max": 300,
          "min": 150,
          "name": "OpenSearch",
        },
      ],
      "name": "Database",
      "total": {
        "max": 340,
        "min": 160,
      },
    },
    {
      "items": [
        {
          "desc": "Internet outbound, first 1GB free",
          "max": 20,
          "min": 5,
          "name": "Data Transfer (outbound)",
        },
      ],
      "name": "Network",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "Storage + requests + data transfer",
          "max": 20,
          "min": 5,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
      ],
      "name": "Storage",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "First 1M free, then $0.4/1M",
          "max": 5,
          "min": 0,
          "name": "SQS",
        },
        {
          "desc": "Shard hours + data processing",
          "max": 60,
          "min": 20,
          "name": "Kinesis Data Streams",
        },
        {
          "desc": "$1/1M events",
          "max": 10,
          "min": 0,
          "name": "EventBridge",
        },
      ],
      "name": "Messaging",
      "total": {
        "max": 75,
        "min": 20,
      },
    },
    {
      "items": [
        {
          "desc": "Included by default, detailed monitoring extra",
          "max": 30,
          "min": 10,
          "name": "CloudWatch (Logs + Metrics + Alarms)",
        },
        {
          "desc": "Editor $9/mo + Viewer $5/mo",
          "max": 18,
          "min": 9,
          "name": "Amazon Managed Grafana",
        },
        {
          "desc": "Scanned data $5/TB",
          "max": 20,
          "min": 5,
          "name": "Athena",
        },
        {
          "desc": "DPU hour $0.44/hr",
          "max": 30,
          "min": 10,
          "name": "AWS Glue",
        },
      ],
      "name": "Operations",
      "total": {
        "max": 98,
        "min": 34,
      },
    },
  ],
  "hasCommit": false,
  "hasSpot": false,
  "totalMax": 608,
  "totalMid": 421,
  "totalMin": 234,
}
`;

exports[`estimateMonthlyCost snapshots > data_pipeline (ko) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "1M+ 요청/월 기준 (첫 1M 무료)",
          "max": 15,
          "min": 0,
          "name": "Lambda 함수",
        },
        {
          "desc": "HTTP API 기준",
          "max": 20,
          "min": 5,
          "name": "API Gateway",
        },
        {
          "desc": "Standard $25/100만 전환, Express $1/100만",
          "max": 20,
          "min": 5,
          "name": "Step Functions",
        },
      ],
      "name": "컴퓨팅",
      "total": {
        "max": 55,
        "min": 10,
      },
    },
    {
      "items": [
        {
          "desc": "읽기/쓰기 요청 건당 과금",
          "max": 40,
          "min": 10,
          "name": "DynamoDB (On-Demand)",
        },
        {
          "desc": "r6g.large × 2",
          "max": 300,
          "min": 150,
          "name": "OpenSearch",
        },
      ],
      "name": "데이터베이스",
      "total": {
        "max": 340,
        "min": 160,
      },
    },
    {
      "items": [
        {
          "desc": "인터넷 아웃바운드 첫 1GB 무료",
          "max": 20,
          "min": 5,
          "name": "데이터 전송 (outbound)",
        },
      ],
      "name": "네트워크",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "저장 + 요청 + 데이터 전송",
          "max": 20,
          "min": 5,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
      ],
      "name": "스토리지",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "첫 1M 무료, 이후 $0.4/1M",
          "max": 5,
          "min": 0,
          "name": "SQS",
        },
        {
          "desc": "샤드 시간 + 데이터 처리",
          "max": 60,
          "min": 20,
          "name": "Kinesis Data Streams",
        },
        {
          "desc": "이벤트 건당 $1/1M",
          "max": 10,
          "min": 0,
          "name": "EventBridge",
        },
      ],
      "name": "메시징",
      "total": {
        "max": 75,
        "min": 20,
      },
    },
    {
      "items": [
        {
          "desc": "기본 포함, 상세 모니터링 추가",
          "max": 30,
          "min": 10,
          "name": "CloudWatch (로그+메트릭+알람)",
        },
        {
          "desc": "에디터 $9/월 + 뷰어 $5/월",
          "max": 18,
          "min": 9,
          "name": "Amazon Managed Grafana",
        },
        {
          "desc": "스캔 데이터 $5/TB",
          "max": 20,
          "min": 5,
          "name": "Athena",
        },
        {
          "desc": "DPU 시간 $0.44/시간",
          "max": 30,
          "min": 10,
          "name": "AWS Glue",
        },
      ],
      "name": "운영",
      "total": {
        "max": 98,
        "min": 34,
      },
    },
  ],
  "hasCommit": false,
  "hasSpot": false,
  "totalMax": 608,
  "totalMid": 421,
  "totalMin": 234,
}
`;

exports[`estimateMonthlyCost snapshots > ecommerce_mvp (en) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "2AZ, CPU/memory based",
          "max": 168,
          "min": 120,
          "name": "ECS Fargate (ARM64)",
        },
        {
          "desc": "Based on LCU",
          "max": 50,
          "min": 20,
          "name": "ALB (Application Load Balancer)",
        },
      ],
      "name": "Compute",
      "total": {
        "max": 218,
        "min": 140,
      },
    },
    {
      "items": [
        {
          "desc": "min 0.5 ~ max 8 ACU",
          "max": 120,
          "min": 72,
          "name": "Aurora Serverless v2",
        },
        {
          "desc": "Based on Aurora I/O-Optimized",
          "max": 60,
          "min": 20,
          "name": "Aurora Storage + I/O",
        },
        {
          "desc": "2AZ Replication Group",
          "max": 96,
          "min": 80,
          "name": "ElastiCache Valkey/Redis",
        },
      ],
      "name": "Database",
      "total": {
        "max": 276,
        "min": 172,
      },
    },
    {
      "items": [
        {
          "desc": "$0.059/hr + data processing charges",
          "max": 88,
          "min": 43,
          "name": "NAT Gateway (1)",
        },
        {
          "desc": "Internet outbound, first 1GB free",
          "max": 20,
          "min": 5,
          "name": "Data Transfer (outbound)",
        },
        {
          "desc": "4 Interface Endpoints ($7/each/mo)",
          "max": 40,
          "min": 28,
          "name": "VPC Interface Endpoints",
        },
      ],
      "name": "Network",
      "total": {
        "max": 148,
        "min": 76,
      },
    },
    {
      "items": [
        {
          "desc": "Data transfer + per-request charges",
          "max": 30,
          "min": 5,
          "name": "CloudFront",
        },
        {
          "desc": "$5/mo + rule/request charges",
          "max": 30,
          "min": 20,
          "name": "WAF Web ACL",
        },
        {
          "desc": "$10/mo + $1/1M requests",
          "max": 20,
          "min": 10,
          "name": "Bot Control",
        },
      ],
      "name": "Edge",
      "total": {
        "max": 80,
        "min": 35,
      },
    },
    {
      "items": [
        {
          "desc": "Storage + requests + data transfer",
          "max": 20,
          "min": 5,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
      ],
      "name": "Storage",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "First 1M free, then $0.4/1M",
          "max": 5,
          "min": 0,
          "name": "SQS",
        },
      ],
      "name": "Messaging",
      "total": {
        "max": 5,
        "min": 0,
      },
    },
    {
      "items": [
        {
          "desc": "Included by default, detailed monitoring extra",
          "max": 30,
          "min": 10,
          "name": "CloudWatch (Logs + Metrics + Alarms)",
        },
        {
          "desc": "Traces $5/1M, sampling config recommended",
          "max": 8,
          "min": 3,
          "name": "AWS X-Ray (Distributed Tracing)",
        },
        {
          "desc": "Compliance / sensitive data monitoring",
          "max": 200,
          "min": 80,
          "name": "Security Hub + GuardDuty + Config",
        },
        {
          "desc": "Event logging + queries",
          "max": 60,
          "min": 20,
          "name": "CloudTrail (S3 storage)",
        },
        {
          "desc": "Per key usage + $1/key/mo",
          "max": 30,
          "min": 10,
          "name": "KMS CMK (per service)",
        },
        {
          "desc": "First 50K MAU free, then $0.0055/MAU",
          "max": 0,
          "min": 0,
          "name": "Cognito User Pool",
        },
        {
          "desc": "$0.10/GB/mo image storage + scanning",
          "max": 5,
          "min": 1,
          "name": "ECR (Container Registry)",
        },
        {
          "desc": "$0.01/instance/hr",
          "max": 15,
          "min": 10,
          "name": "Inspector",
        },
        {
          "desc": "First 1GB free, then $1/GB",
          "max": 5,
          "min": 0,
          "name": "Macie",
        },
      ],
      "name": "Operations",
      "total": {
        "max": 353,
        "min": 134,
      },
    },
  ],
  "hasCommit": false,
  "hasSpot": false,
  "totalMax": 1100,
  "totalMid": 831,
  "totalMin": 562,
}
`;

exports[`estimateMonthlyCost snapshots > ecommerce_mvp (ko) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "2AZ, CPU/메모리 기준",
          "max": 168,
          "min": 120,
          "name": "ECS Fargate (ARM64)",
        },
        {
          "desc": "LCU 기준",
          "max": 50,
          "min": 20,
          "name": "ALB (Application Load Balancer)",
        },
      ],
      "name": "컴퓨팅",
      "total": {
        "max": 218,
        "min": 140,
      },
    },
    {
      "items": [
        {
          "desc": "min 0.5 ~ max 8 ACU",
          "max": 120,
          "min": 72,
          "name": "Aurora Serverless v2",
        },
        {
          "desc": "Aurora I/O-Optimized 기준",
          "max": 60,
          "min": 20,
          "name": "Aurora 스토리지 + I/O",
        },
        {
          "desc": "2AZ Replication Group",
          "max": 96,
          "min": 80,
          "name": "ElastiCache Valkey/Redis",
        },
      ],
      "name": "데이터베이스",
      "total": {
        "max": 276,
        "min": 172,
      },
    },
    {
      "items": [
        {
          "desc": "$0.059/시간 + 데이터 처리 비용",
          "max": 88,
          "min": 43,
          "name": "NAT Gateway (1개)",
        },
        {
          "desc": "인터넷 아웃바운드 첫 1GB 무료",
          "max": 20,
          "min": 5,
          "name": "데이터 전송 (outbound)",
        },
        {
          "desc": "Interface Endpoint 4개 ($7/개/월)",
          "max": 40,
          "min": 28,
          "name": "VPC Interface Endpoints",
        },
      ],
      "name": "네트워크",
      "total": {
        "max": 148,
        "min": 76,
      },
    },
    {
      "items": [
        {
          "desc": "데이터 전송 + 요청 건당",
          "max": 30,
          "min": 5,
          "name": "CloudFront",
        },
        {
          "desc": "$5/월 + 규칙/요청 비용",
          "max": 30,
          "min": 20,
          "name": "WAF Web ACL",
        },
        {
          "desc": "$10/월 + $1/1M 요청",
          "max": 20,
          "min": 10,
          "name": "Bot Control",
        },
      ],
      "name": "엣지",
      "total": {
        "max": 80,
        "min": 35,
      },
    },
    {
      "items": [
        {
          "desc": "저장 + 요청 + 데이터 전송",
          "max": 20,
          "min": 5,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
      ],
      "name": "스토리지",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "첫 1M 무료, 이후 $0.4/1M",
          "max": 5,
          "min": 0,
          "name": "SQS",
        },
      ],
      "name": "메시징",
      "total": {
        "max": 5,
        "min": 0,
      },
    },
    {
      "items": [
        {
          "desc": "기본 포함, 상세 모니터링 추가",
          "max": 30,
          "min": 10,
          "name": "CloudWatch (로그+메트릭+알람)",
        },
        {
          "desc": "추적 $5/백만 건, 샘플링 설정 권장",
          "max": 8,
          "min": 3,
          "name": "AWS X-Ray (분산 추적)",
        },
        {
          "desc": "규정 준수 / 민감 데이터 모니터링",
          "max": 200,
          "min": 80,
          "name": "Security Hub + GuardDuty + Config",
        },
        {
          "desc": "이벤트 기록 + 쿼리",
          "max": 60,
          "min": 20,
          "name": "CloudTrail (S3 저장)",
        },
        {
          "desc": "키 사용 건당 + 월 $1/키",
          "max": 30,
          "min": 10,
          "name": "KMS CMK (서비스별)",
        },
        {
          "desc": "첫 50K MAU 무료, 이후 $0.0055/MAU",
          "max": 0,
          "min": 0,
          "name": "Cognito User Pool",
        },
        {
          "desc": "$0.10/GB/월 이미지 저장 + 스캔",
          "max": 5,
          "min": 1,
          "name": "ECR (컨테이너 레지스트리)",
        },
        {
          "desc": "인스턴스당 $0.01/시간",
          "max": 15,
          "min": 10,
          "name": "Inspector",
        },
        {
          "desc": "첫 1GB 무료, 이후 $1/GB",
          "max": 5,
          "min": 0,
          "name": "Macie",
        },
      ],
      "name": "운영",
      "total": {
        "max": 353,
        "min": 134,
      },
    },
  ],
  "hasCommit": false,
  "hasSpot": false,
  "totalMax": 1100,
  "totalMid": 831,
  "totalMin": 562,
}
`;

exports[`estimateMonthlyCost snapshots > eks_full (en) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "Control Plane $73/mo + Graviton nodes 3AZ",
          "max": 454,
          "min": 345,
          "name": "EKS Cluster",
        },
        {
          "desc": "Up to 70% savings with Spot mix",
          "max": 0,
          "min": 0,
          "name": "Karpenter Dynamic Node Provisioning",
        },
        {
          "desc": "1x t3.medium instance",
          "max": 50,
          "min": 30,
          "name": "ArgoCD (EC2)",
        },
        {
          "desc": "Based on LCU",
          "max": 400,
          "min": 150,
          "name": "ALB (Application Load Balancer)",
        },
        {
          "desc": "Standard $25/1M transitions, Express $1/1M",
          "max": 200,
          "min": 50,
          "name": "Step Functions",
        },
      ],
      "name": "Compute",
      "total": {
        "max": 1104,
        "min": 575,
      },
    },
    {
      "items": [
        {
          "desc": "min 0.5 ~ max 128 ACU",
          "max": 272,
          "min": 163,
          "name": "Aurora Serverless v2",
        },
        {
          "desc": "Reader instance for read distribution",
          "max": 272,
          "min": 218,
          "name": "Aurora Read Replica",
        },
        {
          "desc": "Based on Aurora I/O-Optimized",
          "max": 600,
          "min": 200,
          "name": "Aurora Storage + I/O",
        },
        {
          "desc": "Billed per read/write request",
          "max": 800,
          "min": 200,
          "name": "DynamoDB (On-Demand)",
        },
        {
          "desc": "At high traffic, On-Demand can cost 5-7x more than Provisioned. Consider Reserved Capacity.",
          "max": 0,
          "min": 0,
          "name": "⚠️ DynamoDB On-Demand cost warning",
        },
        {
          "desc": "3AZ Replication Group",
          "max": 163,
          "min": 136,
          "name": "ElastiCache Valkey/Redis",
        },
        {
          "desc": "r6g.large × 3",
          "max": 1800,
          "min": 800,
          "name": "OpenSearch",
        },
      ],
      "name": "Database",
      "total": {
        "max": 3907,
        "min": 1717,
      },
    },
    {
      "items": [
        {
          "desc": "$0.059/hr + data processing charges",
          "max": 579,
          "min": 129,
          "name": "NAT Gateway (3)",
        },
        {
          "desc": "Internet outbound, first 1GB free",
          "max": 300,
          "min": 80,
          "name": "Data Transfer (outbound)",
        },
        {
          "desc": "$0.05/hr per connection (incl. 2 tunnels) + data transfer $0.09/GB",
          "max": 162,
          "min": 36,
          "name": "Site-to-Site VPN",
        },
        {
          "desc": "Port $0.30/hr (1Gbps) + outbound $0.02-0.09/GB",
          "max": 400,
          "min": 180,
          "name": "Direct Connect (1Gbps)",
        },
        {
          "desc": "4 Interface Endpoints ($7/each/mo)",
          "max": 40,
          "min": 28,
          "name": "VPC Interface Endpoints",
        },
      ],
      "name": "Network",
      "total": {
        "max": 1481,
        "min": 453,
      },
    },
    {
      "items": [
        {
          "desc": "Data transfer + per-request charges",
          "max": 500,
          "min": 100,
          "name": "CloudFront",
        },
        {
          "desc": "Fixed $3,000/mo (includes DDoS Response Team (DRT))",
          "max": 3000,
          "min": 3000,
          "name": "Shield Advanced",
        },
      ],
      "name": "Edge",
      "total": {
        "max": 3500,
        "min": 3100,
      },
    },
    {
      "items": [
        {
          "desc": "Storage + requests + data transfer",
          "max": 300,
          "min": 50,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
        {
          "desc": "Standard $0.30/GB/mo, One Zone $0.16/GB/mo",
          "max": 500,
          "min": 150,
          "name": "EFS",
        },
      ],
      "name": "Storage",
      "total": {
        "max": 800,
        "min": 200,
      },
    },
    {
      "items": [
        {
          "desc": "First 1M free, then $0.4/1M",
          "max": 50,
          "min": 0,
          "name": "SQS",
        },
        {
          "desc": "Shard hours + data processing",
          "max": 600,
          "min": 200,
          "name": "Kinesis Data Streams",
        },
        {
          "desc": "$1/1M events",
          "max": 30,
          "min": 0,
          "name": "EventBridge",
        },
      ],
      "name": "Messaging",
      "total": {
        "max": 680,
        "min": 200,
      },
    },
    {
      "items": [
        {
          "desc": "Included by default, detailed monitoring extra",
          "max": 200,
          "min": 50,
          "name": "CloudWatch (Logs + Metrics + Alarms)",
        },
        {
          "desc": "Metrics collection + dashboards",
          "max": 300,
          "min": 100,
          "name": "Amazon Managed Prometheus + Grafana",
        },
        {
          "desc": "Compliance / sensitive data monitoring",
          "max": 200,
          "min": 80,
          "name": "Security Hub + GuardDuty + Config",
        },
        {
          "desc": "Event logging + queries",
          "max": 60,
          "min": 20,
          "name": "CloudTrail (S3 storage)",
        },
        {
          "desc": "Per key usage + $1/key/mo",
          "max": 30,
          "min": 10,
          "name": "KMS CMK (per service)",
        },
        {
          "desc": "Full account auditing",
          "max": 80,
          "min": 30,
          "name": "Control Tower + AWS Config (Organization)",
        },
        {
          "desc": "$0.10/GB/mo image storage + scanning",
          "max": 20,
          "min": 1,
          "name": "ECR (Container Registry)",
        },
        {
          "desc": "$0.01/instance/hr",
          "max": 80,
          "min": 10,
          "name": "Inspector",
        },
        {
          "desc": "First 1GB free, then $1/GB",
          "max": 100,
          "min": 0,
          "name": "Macie",
        },
      ],
      "name": "Operations",
      "total": {
        "max": 1070,
        "min": 301,
      },
    },
    {
      "items": [
        {
          "desc": "DR region base infrastructure cost",
          "max": 2000,
          "min": 800,
          "name": "Replica Region Infrastructure",
        },
        {
          "desc": "Health checks + GlobalAccelerator",
          "max": 100,
          "min": 35,
          "name": "Route53 Health Checks + Global Accelerator",
        },
      ],
      "name": "Multi-Region",
      "total": {
        "max": 2100,
        "min": 835,
      },
    },
  ],
  "hasCommit": true,
  "hasSpot": true,
  "totalMax": 14642,
  "totalMid": 11012,
  "totalMin": 7381,
}
`;

exports[`estimateMonthlyCost snapshots > eks_full (ko) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "Control Plane $73/월 + Graviton 노드 3AZ",
          "max": 454,
          "min": 345,
          "name": "EKS 클러스터",
        },
        {
          "desc": "Spot 혼합으로 최대 70% 절감",
          "max": 0,
          "min": 0,
          "name": "Karpenter 노드 동적 프로비저닝",
        },
        {
          "desc": "t3.medium 1대",
          "max": 50,
          "min": 30,
          "name": "ArgoCD (EC2)",
        },
        {
          "desc": "LCU 기준",
          "max": 400,
          "min": 150,
          "name": "ALB (Application Load Balancer)",
        },
        {
          "desc": "Standard $25/100만 전환, Express $1/100만",
          "max": 200,
          "min": 50,
          "name": "Step Functions",
        },
      ],
      "name": "컴퓨팅",
      "total": {
        "max": 1104,
        "min": 575,
      },
    },
    {
      "items": [
        {
          "desc": "min 0.5 ~ max 128 ACU",
          "max": 272,
          "min": 163,
          "name": "Aurora Serverless v2",
        },
        {
          "desc": "읽기 분산용 리더 인스턴스",
          "max": 272,
          "min": 218,
          "name": "Aurora Read Replica",
        },
        {
          "desc": "Aurora I/O-Optimized 기준",
          "max": 600,
          "min": 200,
          "name": "Aurora 스토리지 + I/O",
        },
        {
          "desc": "읽기/쓰기 요청 건당 과금",
          "max": 800,
          "min": 200,
          "name": "DynamoDB (On-Demand)",
        },
        {
          "desc": "대규모 트래픽에서 On-Demand는 Provisioned 대비 5-7배 비쌀 수 있습니다. Reserved Capacity 검토를 권장합니다.",
          "max": 0,
          "min": 0,
          "name": "⚠️ DynamoDB On-Demand 비용 주의",
        },
        {
          "desc": "3AZ Replication Group",
          "max": 163,
          "min": 136,
          "name": "ElastiCache Valkey/Redis",
        },
        {
          "desc": "r6g.large × 3",
          "max": 1800,
          "min": 800,
          "name": "OpenSearch",
        },
      ],
      "name": "데이터베이스",
      "total": {
        "max": 3907,
        "min": 1717,
      },
    },
    {
      "items": [
        {
          "desc": "$0.059/시간 + 데이터 처리 비용",
          "max": 579,
          "min": 129,
          "name": "NAT Gateway (3개)",
        },
        {
          "desc": "인터넷 아웃바운드 첫 1GB 무료",
          "max": 300,
          "min": 80,
          "name": "데이터 전송 (outbound)",
        },
        {
          "desc": "$0.05/시간 (2 터널 포함) + 데이터 전송 $0.09/GB",
          "max": 162,
          "min": 36,
          "name": "Site-to-Site VPN",
        },
        {
          "desc": "포트 $0.30/시간(1Gbps) + 아웃바운드 $0.02-0.09/GB",
          "max": 400,
          "min": 180,
          "name": "Direct Connect (1Gbps)",
        },
        {
          "desc": "Interface Endpoint 4개 ($7/개/월)",
          "max": 40,
          "min": 28,
          "name": "VPC Interface Endpoints",
        },
      ],
      "name": "네트워크",
      "total": {
        "max": 1481,
        "min": 453,
      },
    },
    {
      "items": [
        {
          "desc": "데이터 전송 + 요청 건당",
          "max": 500,
          "min": 100,
          "name": "CloudFront",
        },
        {
          "desc": "고정 $3,000/월 (DRT 포함)",
          "max": 3000,
          "min": 3000,
          "name": "Shield Advanced",
        },
      ],
      "name": "엣지",
      "total": {
        "max": 3500,
        "min": 3100,
      },
    },
    {
      "items": [
        {
          "desc": "저장 + 요청 + 데이터 전송",
          "max": 300,
          "min": 50,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
        {
          "desc": "Standard $0.30/GB/월, One Zone $0.16/GB/월",
          "max": 500,
          "min": 150,
          "name": "EFS",
        },
      ],
      "name": "스토리지",
      "total": {
        "max": 800,
        "min": 200,
      },
    },
    {
      "items": [
        {
          "desc": "첫 1M 무료, 이후 $0.4/1M",
          "max": 50,
          "min": 0,
          "name": "SQS",
        },
        {
          "desc": "샤드 시간 + 데이터 처리",
          "max": 600,
          "min": 200,
          "name": "Kinesis Data Streams",
        },
        {
          "desc": "이벤트 건당 $1/1M",
          "max": 30,
          "min": 0,
          "name": "EventBridge",
        },
      ],
      "name": "메시징",
      "total": {
        "max": 680,
        "min": 200,
      },
    },
    {
      "items": [
        {
          "desc": "기본 포함, 상세 모니터링 추가",
          "max": 200,
          "min": 50,
          "name": "CloudWatch (로그+메트릭+알람)",
        },
        {
          "desc": "메트릭 수집 + 대시보드",
          "max": 300,
          "min": 100,
          "name": "Amazon Managed Prometheus + Grafana",
        },
        {
          "desc": "규정 준수 / 민감 데이터 모니터링",
          "max": 200,
          "min": 80,
          "name": "Security Hub + GuardDuty + Config",
        },
        {
          "desc": "이벤트 기록 + 쿼리",
          "max": 60,
          "min": 20,
          "name": "CloudTrail (S3 저장)",
        },
        {
          "desc": "키 사용 건당 + 월 $1/키",
          "max": 30,
          "min": 10,
          "name": "KMS CMK (서비스별)",
        },
        {
          "desc": "전체 계정 감사",
          "max": 80,
          "min": 30,
          "name": "Control Tower + AWS Config (조직)",
        },
        {
          "desc": "$0.10/GB/월 이미지 저장 + 스캔",
          "max": 20,
          "min": 1,
          "name": "ECR (컨테이너 레지스트리)",
        },
        {
          "desc": "인스턴스당 $0.01/시간",
          "max": 80,
          "min": 10,
          "name": "Inspector",
        },
        {
          "desc": "첫 1GB 무료, 이후 $1/GB",
          "max": 100,
          "min": 0,
          "name": "Macie",
        },
      ],
      "name": "운영",
      "total": {
        "max": 1070,
        "min": 301,
      },
    },
    {
      "items": [
        {
          "desc": "DR 리전 기본 인프라 비용",
          "max": 2000,
          "min": 800,
          "name": "복제 리전 인프라",
        },
        {
          "desc": "헬스체크 + GlobalAccelerator",
          "max": 100,
          "min": 35,
          "name": "Route53 헬스체크 + 글로벌 가속",
        },
      ],
      "name": "멀티리전",
      "total": {
        "max": 2100,
        "min": 835,
      },
    },
  ],
  "hasCommit": true,
  "hasSpot": true,
  "totalMax": 14642,
  "totalMid": 11012,
  "totalMin": 7381,
}
`;

exports[`estimateMonthlyCost snapshots > generic_web_api (en) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "2AZ, CPU/memory based",
          "max": 168,
          "min": 120,
          "name": "ECS Fargate (ARM64)",
        },
        {
          "desc": "Based on LCU",
          "max": 50,
          "min": 20,
          "name": "ALB (Application Load Balancer)",
        },
      ],
      "name": "Compute",
      "total": {
        "max": 218,
        "min": 140,
      },
    },
    {
      "items": [
        {
          "desc": "Multi-AZ",
          "max": 240,
          "min": 200,
          "name": "RDS Instance",
        },
      ],
      "name": "Database",
      "total": {
        "max": 240,
        "min": 200,
      },
    },
    {
      "items": [
        {
          "desc": "$0.059/hr + data processing charges",
          "max": 88,
          "min": 43,
          "name": "NAT Gateway (1)",
        },
        {
          "desc": "Internet outbound, first 1GB free",
          "max": 20,
          "min": 5,
          "name": "Data Transfer (outbound)",
        },
      ],
      "name": "Network",
      "total": {
        "max": 108,
        "min": 48,
      },
    },
    {
      "items": [
        {
          "desc": "Data transfer + per-request charges",
          "max": 30,
          "min": 5,
          "name": "CloudFront",
        },
        {
          "desc": "$5/mo + rule/request charges",
          "max": 30,
          "min": 20,
          "name": "WAF Web ACL",
        },
      ],
      "name": "Edge",
      "total": {
        "max": 60,
        "min": 25,
      },
    },
    {
      "items": [
        {
          "desc": "Storage + requests + data transfer",
          "max": 20,
          "min": 5,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
      ],
      "name": "Storage",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "Included by default, detailed monitoring extra",
          "max": 30,
          "min": 10,
          "name": "CloudWatch (Logs + Metrics + Alarms)",
        },
        {
          "desc": "Compliance / sensitive data monitoring",
          "max": 200,
          "min": 80,
          "name": "Security Hub + GuardDuty + Config",
        },
        {
          "desc": "Event logging + queries",
          "max": 60,
          "min": 20,
          "name": "CloudTrail (S3 storage)",
        },
        {
          "desc": "First 50K MAU free, then $0.0055/MAU",
          "max": 0,
          "min": 0,
          "name": "Cognito User Pool",
        },
        {
          "desc": "$0.10/GB/mo image storage + scanning",
          "max": 5,
          "min": 1,
          "name": "ECR (Container Registry)",
        },
        {
          "desc": "$0.01/instance/hr",
          "max": 15,
          "min": 10,
          "name": "Inspector",
        },
        {
          "desc": "First 1GB free, then $1/GB",
          "max": 5,
          "min": 0,
          "name": "Macie",
        },
      ],
      "name": "Operations",
      "total": {
        "max": 315,
        "min": 121,
      },
    },
  ],
  "hasCommit": false,
  "hasSpot": false,
  "totalMax": 961,
  "totalMid": 750,
  "totalMin": 539,
}
`;

exports[`estimateMonthlyCost snapshots > generic_web_api (ko) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "2AZ, CPU/메모리 기준",
          "max": 168,
          "min": 120,
          "name": "ECS Fargate (ARM64)",
        },
        {
          "desc": "LCU 기준",
          "max": 50,
          "min": 20,
          "name": "ALB (Application Load Balancer)",
        },
      ],
      "name": "컴퓨팅",
      "total": {
        "max": 218,
        "min": 140,
      },
    },
    {
      "items": [
        {
          "desc": "Multi-AZ",
          "max": 240,
          "min": 200,
          "name": "RDS 인스턴스",
        },
      ],
      "name": "데이터베이스",
      "total": {
        "max": 240,
        "min": 200,
      },
    },
    {
      "items": [
        {
          "desc": "$0.059/시간 + 데이터 처리 비용",
          "max": 88,
          "min": 43,
          "name": "NAT Gateway (1개)",
        },
        {
          "desc": "인터넷 아웃바운드 첫 1GB 무료",
          "max": 20,
          "min": 5,
          "name": "데이터 전송 (outbound)",
        },
      ],
      "name": "네트워크",
      "total": {
        "max": 108,
        "min": 48,
      },
    },
    {
      "items": [
        {
          "desc": "데이터 전송 + 요청 건당",
          "max": 30,
          "min": 5,
          "name": "CloudFront",
        },
        {
          "desc": "$5/월 + 규칙/요청 비용",
          "max": 30,
          "min": 20,
          "name": "WAF Web ACL",
        },
      ],
      "name": "엣지",
      "total": {
        "max": 60,
        "min": 25,
      },
    },
    {
      "items": [
        {
          "desc": "저장 + 요청 + 데이터 전송",
          "max": 20,
          "min": 5,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
      ],
      "name": "스토리지",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "기본 포함, 상세 모니터링 추가",
          "max": 30,
          "min": 10,
          "name": "CloudWatch (로그+메트릭+알람)",
        },
        {
          "desc": "규정 준수 / 민감 데이터 모니터링",
          "max": 200,
          "min": 80,
          "name": "Security Hub + GuardDuty + Config",
        },
        {
          "desc": "이벤트 기록 + 쿼리",
          "max": 60,
          "min": 20,
          "name": "CloudTrail (S3 저장)",
        },
        {
          "desc": "첫 50K MAU 무료, 이후 $0.0055/MAU",
          "max": 0,
          "min": 0,
          "name": "Cognito User Pool",
        },
        {
          "desc": "$0.10/GB/월 이미지 저장 + 스캔",
          "max": 5,
          "min": 1,
          "name": "ECR (컨테이너 레지스트리)",
        },
        {
          "desc": "인스턴스당 $0.01/시간",
          "max": 15,
          "min": 10,
          "name": "Inspector",
        },
        {
          "desc": "첫 1GB 무료, 이후 $1/GB",
          "max": 5,
          "min": 0,
          "name": "Macie",
        },
      ],
      "name": "운영",
      "total": {
        "max": 315,
        "min": 121,
      },
    },
  ],
  "hasCommit": false,
  "hasSpot": false,
  "totalMax": 961,
  "totalMid": 750,
  "totalMin": 539,
}
`;

exports[`estimateMonthlyCost snapshots > internal_tool (en) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "Based on 1M+ requests/mo (first 1M free)",
          "max": 15,
          "min": 0,
          "name": "Lambda Functions",
        },
        {
          "desc": "Based on HTTP API",
          "max": 20,
          "min": 5,
          "name": "API Gateway",
        },
      ],
      "name": "Compute",
      "total": {
        "max": 35,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "min 0.5 ~ max 8 ACU",
          "max": 30,
          "min": 18,
          "name": "Aurora Serverless v2",
        },
        {
          "desc": "Based on Aurora I/O-Optimized",
          "max": 60,
          "min": 20,
          "name": "Aurora Storage + I/O",
        },
        {
          "desc": "Lambda-to-RDS connection pooling (~15% of DB cost)",
          "max": 12,
          "min": 8,
          "name": "RDS Proxy",
        },
      ],
      "name": "Database",
      "total": {
        "max": 102,
        "min": 46,
      },
    },
    {
      "items": [
        {
          "desc": "Internet outbound, first 1GB free",
          "max": 20,
          "min": 5,
          "name": "Data Transfer (outbound)",
        },
      ],
      "name": "Network",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "Storage + requests + data transfer",
          "max": 20,
          "min": 5,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
      ],
      "name": "Storage",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "Included by default, detailed monitoring extra",
          "max": 30,
          "min": 10,
          "name": "CloudWatch (Logs + Metrics + Alarms)",
        },
        {
          "desc": "First 50K MAU free, then $0.0055/MAU",
          "max": 0,
          "min": 0,
          "name": "Cognito User Pool",
        },
      ],
      "name": "Operations",
      "total": {
        "max": 30,
        "min": 10,
      },
    },
  ],
  "hasCommit": false,
  "hasSpot": false,
  "totalMax": 207,
  "totalMid": 139,
  "totalMin": 71,
}
`;

exports[`estimateMonthlyCost snapshots > internal_tool (ko) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "1M+ 요청/월 기준 (첫 1M 무료)",
          "max": 15,
          "min": 0,
          "name": "Lambda 함수",
        },
        {
          "desc": "HTTP API 기준",
          "max": 20,
          "min": 5,
          "name": "API Gateway",
        },
      ],
      "name": "컴퓨팅",
      "total": {
        "max": 35,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "min 0.5 ~ max 8 ACU",
          "max": 30,
          "min": 18,
          "name": "Aurora Serverless v2",
        },
        {
          "desc": "Aurora I/O-Optimized 기준",
          "max": 60,
          "min": 20,
          "name": "Aurora 스토리지 + I/O",
        },
        {
          "desc": "Lambda→RDS 커넥션 풀링 (DB 비용의 ~15%)",
          "max": 12,
          "min": 8,
          "name": "RDS Proxy",
        },
      ],
      "name": "데이터베이스",
      "total": {
        "max": 102,
        "min": 46,
      },
    },
    {
      "items": [
        {
          "desc": "인터넷 아웃바운드 첫 1GB 무료",
          "max": 20,
          "min": 5,
          "name": "데이터 전송 (outbound)",
        },
      ],
      "name": "네트워크",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "저장 + 요청 + 데이터 전송",
          "max": 20,
          "min": 5,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
      ],
      "name": "스토리지",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "기본 포함, 상세 모니터링 추가",
          "max": 30,
          "min": 10,
          "name": "CloudWatch (로그+메트릭+알람)",
        },
        {
          "desc": "첫 50K MAU 무료, 이후 $0.0055/MAU",
          "max": 0,
          "min": 0,
          "name": "Cognito User Pool",
        },
      ],
      "name": "운영",
      "total": {
        "max": 30,
        "min": 10,
      },
    },
  ],
  "hasCommit": false,
  "hasSpot": false,
  "totalMax": 207,
  "totalMid": 139,
  "totalMin": 71,
}
`;

exports[`estimateMonthlyCost snapshots > iot_platform (en) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "2AZ, CPU/memory based",
          "max": 168,
          "min": 84,
          "name": "ECS Fargate (ARM64)",
        },
        {
          "desc": "Based on LCU",
          "max": 50,
          "min": 20,
          "name": "ALB (Application Load Balancer)",
        },
        {
          "desc": "Based on 20 core devices",
          "max": 5,
          "min": 3,
          "name": "IoT Greengrass",
        },
        {
          "desc": "Device connections + messages $1/1M",
          "max": 1,
          "min": 0,
          "name": "IoT Core",
        },
        {
          "desc": "Standard $25/1M transitions, Express $1/1M",
          "max": 20,
          "min": 5,
          "name": "Step Functions",
        },
      ],
      "name": "Compute",
      "total": {
        "max": 244,
        "min": 112,
      },
    },
    {
      "items": [
        {
          "desc": "Billed per read/write request",
          "max": 40,
          "min": 10,
          "name": "DynamoDB (On-Demand)",
        },
        {
          "desc": "2AZ Replication Group",
          "max": 144,
          "min": 120,
          "name": "ElastiCache Valkey/Redis",
        },
        {
          "desc": "r6g.large × 2",
          "max": 300,
          "min": 150,
          "name": "OpenSearch",
        },
      ],
      "name": "Database",
      "total": {
        "max": 484,
        "min": 280,
      },
    },
    {
      "items": [
        {
          "desc": "$0.059/hr + data processing charges",
          "max": 88,
          "min": 43,
          "name": "NAT Gateway (1)",
        },
        {
          "desc": "Internet outbound, first 1GB free",
          "max": 20,
          "min": 5,
          "name": "Data Transfer (outbound)",
        },
      ],
      "name": "Network",
      "total": {
        "max": 108,
        "min": 48,
      },
    },
    {
      "items": [
        {
          "desc": "$5/mo + rule/request charges",
          "max": 30,
          "min": 20,
          "name": "WAF Web ACL",
        },
      ],
      "name": "Edge",
      "total": {
        "max": 30,
        "min": 20,
      },
    },
    {
      "items": [
        {
          "desc": "Storage + requests + data transfer",
          "max": 20,
          "min": 5,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
      ],
      "name": "Storage",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "First 1M free, then $0.4/1M",
          "max": 5,
          "min": 0,
          "name": "SQS",
        },
        {
          "desc": "Shard hours + data processing",
          "max": 60,
          "min": 20,
          "name": "Kinesis Data Streams",
        },
        {
          "desc": "$1/1M events",
          "max": 10,
          "min": 0,
          "name": "EventBridge",
        },
      ],
      "name": "Messaging",
      "total": {
        "max": 75,
        "min": 20,
      },
    },
    {
      "items": [
        {
          "desc": "Included by default, detailed monitoring extra",
          "max": 30,
          "min": 10,
          "name": "CloudWatch (Logs + Metrics + Alarms)",
        },
        {
          "desc": "Editor $9/mo + Viewer $5/mo",
          "max": 18,
          "min": 9,
          "name": "Amazon Managed Grafana",
        },
        {
          "desc": "Compliance / sensitive data monitoring",
          "max": 200,
          "min": 80,
          "name": "Security Hub + GuardDuty + Config",
        },
        {
          "desc": "Event logging + queries",
          "max": 60,
          "min": 20,
          "name": "CloudTrail (S3 storage)",
        },
        {
          "desc": "First 50K MAU free, then $0.0055/MAU",
          "max": 0,
          "min": 0,
          "name": "Cognito User Pool",
        },
        {
          "desc": "$0.10/GB/mo image storage + scanning",
          "max": 5,
          "min": 1,
          "name": "ECR (Container Registry)",
        },
        {
          "desc": "$0.01/instance/hr",
          "max": 15,
          "min": 10,
          "name": "Inspector",
        },
        {
          "desc": "First 1GB free, then $1/GB",
          "max": 5,
          "min": 0,
          "name": "Macie",
        },
      ],
      "name": "Operations",
      "total": {
        "max": 333,
        "min": 130,
      },
    },
  ],
  "hasCommit": false,
  "hasSpot": true,
  "totalMax": 1294,
  "totalMid": 955,
  "totalMin": 615,
}
`;

exports[`estimateMonthlyCost snapshots > iot_platform (ko) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "2AZ, CPU/메모리 기준",
          "max": 168,
          "min": 84,
          "name": "ECS Fargate (ARM64)",
        },
        {
          "desc": "LCU 기준",
          "max": 50,
          "min": 20,
          "name": "ALB (Application Load Balancer)",
        },
        {
          "desc": "코어 디바이스 20대 기준",
          "max": 5,
          "min": 3,
          "name": "IoT Greengrass",
        },
        {
          "desc": "디바이스 연결 + 메시지 $1/1M",
          "max": 1,
          "min": 0,
          "name": "IoT Core",
        },
        {
          "desc": "Standard $25/100만 전환, Express $1/100만",
          "max": 20,
          "min": 5,
          "name": "Step Functions",
        },
      ],
      "name": "컴퓨팅",
      "total": {
        "max": 244,
        "min": 112,
      },
    },
    {
      "items": [
        {
          "desc": "읽기/쓰기 요청 건당 과금",
          "max": 40,
          "min": 10,
          "name": "DynamoDB (On-Demand)",
        },
        {
          "desc": "2AZ Replication Group",
          "max": 144,
          "min": 120,
          "name": "ElastiCache Valkey/Redis",
        },
        {
          "desc": "r6g.large × 2",
          "max": 300,
          "min": 150,
          "name": "OpenSearch",
        },
      ],
      "name": "데이터베이스",
      "total": {
        "max": 484,
        "min": 280,
      },
    },
    {
      "items": [
        {
          "desc": "$0.059/시간 + 데이터 처리 비용",
          "max": 88,
          "min": 43,
          "name": "NAT Gateway (1개)",
        },
        {
          "desc": "인터넷 아웃바운드 첫 1GB 무료",
          "max": 20,
          "min": 5,
          "name": "데이터 전송 (outbound)",
        },
      ],
      "name": "네트워크",
      "total": {
        "max": 108,
        "min": 48,
      },
    },
    {
      "items": [
        {
          "desc": "$5/월 + 규칙/요청 비용",
          "max": 30,
          "min": 20,
          "name": "WAF Web ACL",
        },
      ],
      "name": "엣지",
      "total": {
        "max": 30,
        "min": 20,
      },
    },
    {
      "items": [
        {
          "desc": "저장 + 요청 + 데이터 전송",
          "max": 20,
          "min": 5,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
      ],
      "name": "스토리지",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "첫 1M 무료, 이후 $0.4/1M",
          "max": 5,
          "min": 0,
          "name": "SQS",
        },
        {
          "desc": "샤드 시간 + 데이터 처리",
          "max": 60,
          "min": 20,
          "name": "Kinesis Data Streams",
        },
        {
          "desc": "이벤트 건당 $1/1M",
          "max": 10,
          "min": 0,
          "name": "EventBridge",
        },
      ],
      "name": "메시징",
      "total": {
        "max": 75,
        "min": 20,
      },
    },
    {
      "items": [
        {
          "desc": "기본 포함, 상세 모니터링 추가",
          "max": 30,
          "min": 10,
          "name": "CloudWatch (로그+메트릭+알람)",
        },
        {
          "desc": "에디터 $9/월 + 뷰어 $5/월",
          "max": 18,
          "min": 9,
          "name": "Amazon Managed Grafana",
        },
        {
          "desc": "규정 준수 / 민감 데이터 모니터링",
          "max": 200,
          "min": 80,
          "name": "Security Hub + GuardDuty + Config",
        },
        {
          "desc": "이벤트 기록 + 쿼리",
          "max": 60,
          "min": 20,
          "name": "CloudTrail (S3 저장)",
        },
        {
          "desc": "첫 50K MAU 무료, 이후 $0.0055/MAU",
          "max": 0,
          "min": 0,
          "name": "Cognito User Pool",
        },
        {
          "desc": "$0.10/GB/월 이미지 저장 + 스캔",
          "max": 5,
          "min": 1,
          "name": "ECR (컨테이너 레지스트리)",
        },
        {
          "desc": "인스턴스당 $0.01/시간",
          "max": 15,
          "min": 10,
          "name": "Inspector",
        },
        {
          "desc": "첫 1GB 무료, 이후 $1/GB",
          "max": 5,
          "min": 0,
          "name": "Macie",
        },
      ],
      "name": "운영",
      "total": {
        "max": 333,
        "min": 130,
      },
    },
  ],
  "hasCommit": false,
  "hasSpot": true,
  "totalMax": 1294,
  "totalMid": 955,
  "totalMin": 615,
}
`;

exports[`estimateMonthlyCost snapshots > minimal (en) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "2AZ, CPU/memory based",
          "max": 168,
          "min": 120,
          "name": "ECS Fargate (ARM64)",
        },
        {
          "desc": "Based on LCU",
          "max": 50,
          "min": 20,
          "name": "ALB (Application Load Balancer)",
        },
      ],
      "name": "Compute",
      "total": {
        "max": 218,
        "min": 140,
      },
    },
    {
      "items": [
        {
          "desc": "$0.059/hr + data processing charges",
          "max": 88,
          "min": 43,
          "name": "NAT Gateway (1)",
        },
        {
          "desc": "Internet outbound, first 1GB free",
          "max": 20,
          "min": 5,
          "name": "Data Transfer (outbound)",
        },
      ],
      "name": "Network",
      "total": {
        "max": 108,
        "min": 48,
      },
    },
    {
      "items": [
        {
          "desc": "Data transfer + per-request charges",
          "max": 30,
          "min": 5,
          "name": "CloudFront",
        },
      ],
      "name": "Edge",
      "total": {
        "max": 30,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "First 1M free, then $0.4/1M",
          "max": 5,
          "min": 0,
          "name": "SQS",
        },
      ],
      "name": "Messaging",
      "total": {
        "max": 5,
        "min": 0,
      },
    },
    {
      "items": [
        {
          "desc": "Included by default, detailed monitoring extra",
          "max": 30,
          "min": 10,
          "name": "CloudWatch (Logs + Metrics + Alarms)",
        },
        {
          "desc": "$0.10/GB/mo image storage + scanning",
          "max": 5,
          "min": 1,
          "name": "ECR (Container Registry)",
        },
      ],
      "name": "Operations",
      "total": {
        "max": 35,
        "min": 11,
      },
    },
  ],
  "hasCommit": false,
  "hasSpot": false,
  "totalMax": 396,
  "totalMid": 300,
  "totalMin": 204,
}
`;

exports[`estimateMonthlyCost snapshots > minimal (ko) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "2AZ, CPU/메모리 기준",
          "max": 168,
          "min": 120,
          "name": "ECS Fargate (ARM64)",
        },
        {
          "desc": "LCU 기준",
          "max": 50,
          "min": 20,
          "name": "ALB (Application Load Balancer)",
        },
      ],
      "name": "컴퓨팅",
      "total": {
        "max": 218,
        "min": 140,
      },
    },
    {
      "items": [
        {
          "desc": "$0.059/시간 + 데이터 처리 비용",
          "max": 88,
          "min": 43,
          "name": "NAT Gateway (1개)",
        },
        {
          "desc": "인터넷 아웃바운드 첫 1GB 무료",
          "max": 20,
          "min": 5,
          "name": "데이터 전송 (outbound)",
        },
      ],
      "name": "네트워크",
      "total": {
        "max": 108,
        "min": 48,
      },
    },
    {
      "items": [
        {
          "desc": "데이터 전송 + 요청 건당",
          "max": 30,
          "min": 5,
          "name": "CloudFront",
        },
      ],
      "name": "엣지",
      "total": {
        "max": 30,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "첫 1M 무료, 이후 $0.4/1M",
          "max": 5,
          "min": 0,
          "name": "SQS",
        },
      ],
      "name": "메시징",
      "total": {
        "max": 5,
        "min": 0,
      },
    },
    {
      "items": [
        {
          "desc": "기본 포함, 상세 모니터링 추가",
          "max": 30,
          "min": 10,
          "name": "CloudWatch (로그+메트릭+알람)",
        },
        {
          "desc": "$0.10/GB/월 이미지 저장 + 스캔",
          "max": 5,
          "min": 1,
          "name": "ECR (컨테이너 레지스트리)",
        },
      ],
      "name": "운영",
      "total": {
        "max": 35,
        "min": 11,
      },
    },
  ],
  "hasCommit": false,
  "hasSpot": false,
  "totalMax": 396,
  "totalMid": 300,
  "totalMin": 204,
}
`;

exports[`estimateMonthlyCost snapshots > realtime_chat (en) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "2AZ, CPU/memory based",
          "max": 168,
          "min": 120,
          "name": "ECS Fargate (ARM64)",
        },
        {
          "desc": "Based on LCU",
          "max": 50,
          "min": 20,
          "name": "ALB (Application Load Balancer)",
        },
      ],
      "name": "Compute",
      "total": {
        "max": 218,
        "min": 140,
      },
    },
    {
      "items": [
        {
          "desc": "min 0.5 ~ max 8 ACU",
          "max": 200,
          "min": 120,
          "name": "Aurora Serverless v2",
        },
        {
          "desc": "Based on Aurora I/O-Optimized",
          "max": 60,
          "min": 20,
          "name": "Aurora Storage + I/O",
        },
        {
          "desc": "Billed per read/write request",
          "max": 40,
          "min": 10,
          "name": "DynamoDB (On-Demand)",
        },
        {
          "desc": "2AZ Replication Group",
          "max": 144,
          "min": 120,
          "name": "ElastiCache Valkey/Redis",
        },
        {
          "desc": "r6g.large × 2",
          "max": 300,
          "min": 150,
          "name": "OpenSearch",
        },
      ],
      "name": "Database",
      "total": {
        "max": 744,
        "min": 420,
      },
    },
    {
      "items": [
        {
          "desc": "$0.059/hr + data processing charges",
          "max": 131,
          "min": 86,
          "name": "NAT Gateway (2)",
        },
        {
          "desc": "Internet outbound, first 1GB free",
          "max": 20,
          "min": 5,
          "name": "Data Transfer (outbound)",
        },
      ],
      "name": "Network",
      "total": {
        "max": 151,
        "min": 91,
      },
    },
    {
      "items": [
        {
          "desc": "Data transfer + per-request charges",
          "max": 30,
          "min": 5,
          "name": "CloudFront",
        },
        {
          "desc": "$5/mo + rule/request charges",
          "max": 30,
          "min": 20,
          "name": "WAF Web ACL",
        },
      ],
      "name": "Edge",
      "total": {
        "max": 60,
        "min": 25,
      },
    },
    {
      "items": [
        {
          "desc": "Storage + requests + data transfer",
          "max": 20,
          "min": 5,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
      ],
      "name": "Storage",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "First 1M free, then $0.4/1M",
          "max": 5,
          "min": 0,
          "name": "SQS",
        },
        {
          "desc": "Shard hours + data processing",
          "max": 60,
          "min": 20,
          "name": "Kinesis Data Streams",
        },
      ],
      "name": "Messaging",
      "total": {
        "max": 65,
        "min": 20,
      },
    },
    {
      "items": [
        {
          "desc": "Included by default, detailed monitoring extra",
          "max": 30,
          "min": 10,
          "name": "CloudWatch (Logs + Metrics + Alarms)",
        },
        {
          "desc": "Traces $5/1M, sampling config recommended",
          "max": 8,
          "min": 3,
          "name": "AWS X-Ray (Distributed Tracing)",
        },
        {
          "desc": "Compliance / sensitive data monitoring",
          "max": 200,
          "min": 80,
          "name": "Security Hub + GuardDuty + Config",
        },
        {
          "desc": "Event logging + queries",
          "max": 60,
          "min": 20,
          "name": "CloudTrail (S3 storage)",
        },
        {
          "desc": "First 50K MAU free, then $0.0055/MAU",
          "max": 0,
          "min": 0,
          "name": "Cognito User Pool",
        },
        {
          "desc": "$0.10/GB/mo image storage + scanning",
          "max": 5,
          "min": 1,
          "name": "ECR (Container Registry)",
        },
        {
          "desc": "$0.01/instance/hr",
          "max": 15,
          "min": 10,
          "name": "Inspector",
        },
        {
          "desc": "First 1GB free, then $1/GB",
          "max": 5,
          "min": 0,
          "name": "Macie",
        },
      ],
      "name": "Operations",
      "total": {
        "max": 323,
        "min": 124,
      },
    },
  ],
  "hasCommit": false,
  "hasSpot": false,
  "totalMax": 1581,
  "totalMid": 1203,
  "totalMin": 825,
}
`;

exports[`estimateMonthlyCost snapshots > realtime_chat (ko) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "2AZ, CPU/메모리 기준",
          "max": 168,
          "min": 120,
          "name": "ECS Fargate (ARM64)",
        },
        {
          "desc": "LCU 기준",
          "max": 50,
          "min": 20,
          "name": "ALB (Application Load Balancer)",
        },
      ],
      "name": "컴퓨팅",
      "total": {
        "max": 218,
        "min": 140,
      },
    },
    {
      "items": [
        {
          "desc": "min 0.5 ~ max 8 ACU",
          "max": 200,
          "min": 120,
          "name": "Aurora Serverless v2",
        },
        {
          "desc": "Aurora I/O-Optimized 기준",
          "max": 60,
          "min": 20,
          "name": "Aurora 스토리지 + I/O",
        },
        {
          "desc": "읽기/쓰기 요청 건당 과금",
          "max": 40,
          "min": 10,
          "name": "DynamoDB (On-Demand)",
        },
        {
          "desc": "2AZ Replication Group",
          "max": 144,
          "min": 120,
          "name": "ElastiCache Valkey/Redis",
        },
        {
          "desc": "r6g.large × 2",
          "max": 300,
          "min": 150,
          "name": "OpenSearch",
        },
      ],
      "name": "데이터베이스",
      "total": {
        "max": 744,
        "min": 420,
      },
    },
    {
      "items": [
        {
          "desc": "$0.059/시간 + 데이터 처리 비용",
          "max": 131,
          "min": 86,
          "name": "NAT Gateway (2개)",
        },
        {
          "desc": "인터넷 아웃바운드 첫 1GB 무료",
          "max": 20,
          "min": 5,
          "name": "데이터 전송 (outbound)",
        },
      ],
      "name": "네트워크",
      "total": {
        "max": 151,
        "min": 91,
      },
    },
    {
      "items": [
        {
          "desc": "데이터 전송 + 요청 건당",
          "max": 30,
          "min": 5,
          "name": "CloudFront",
        },
        {
          "desc": "$5/월 + 규칙/요청 비용",
          "max": 30,
          "min": 20,
          "name": "WAF Web ACL",
        },
      ],
      "name": "엣지",
      "total": {
        "max": 60,
        "min": 25,
      },
    },
    {
      "items": [
        {
          "desc": "저장 + 요청 + 데이터 전송",
          "max": 20,
          "min": 5,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
      ],
      "name": "스토리지",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "첫 1M 무료, 이후 $0.4/1M",
          "max": 5,
          "min": 0,
          "name": "SQS",
        },
        {
          "desc": "샤드 시간 + 데이터 처리",
          "max": 60,
          "min": 20,
          "name": "Kinesis Data Streams",
        },
      ],
      "name": "메시징",
      "total": {
        "max": 65,
        "min": 20,
      },
    },
    {
      "items": [
        {
          "desc": "기본 포함, 상세 모니터링 추가",
          "max": 30,
          "min": 10,
          "name": "CloudWatch (로그+메트릭+알람)",
        },
        {
          "desc": "추적 $5/백만 건, 샘플링 설정 권장",
          "max": 8,
          "min": 3,
          "name": "AWS X-Ray (분산 추적)",
        },
        {
          "desc": "규정 준수 / 민감 데이터 모니터링",
          "max": 200,
          "min": 80,
          "name": "Security Hub + GuardDuty + Config",
        },
        {
          "desc": "이벤트 기록 + 쿼리",
          "max": 60,
          "min": 20,
          "name": "CloudTrail (S3 저장)",
        },
        {
          "desc": "첫 50K MAU 무료, 이후 $0.0055/MAU",
          "max": 0,
          "min": 0,
          "name": "Cognito User Pool",
        },
        {
          "desc": "$0.10/GB/월 이미지 저장 + 스캔",
          "max": 5,
          "min": 1,
          "name": "ECR (컨테이너 레지스트리)",
        },
        {
          "desc": "인스턴스당 $0.01/시간",
          "max": 15,
          "min": 10,
          "name": "Inspector",
        },
        {
          "desc": "첫 1GB 무료, 이후 $1/GB",
          "max": 5,
          "min": 0,
          "name": "Macie",
        },
      ],
      "name": "운영",
      "total": {
        "max": 323,
        "min": 124,
      },
    },
  ],
  "hasCommit": false,
  "hasSpot": false,
  "totalMax": 1581,
  "totalMid": 1203,
  "totalMin": 825,
}
`;

exports[`estimateMonthlyCost snapshots > serverless (en) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "Based on 1M+ requests/mo (first 1M free)",
          "max": 15,
          "min": 0,
          "name": "Lambda Functions",
        },
        {
          "desc": "Based on HTTP API",
          "max": 20,
          "min": 5,
          "name": "API Gateway",
        },
      ],
      "name": "Compute",
      "total": {
        "max": 35,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "Billed per read/write request",
          "max": 40,
          "min": 10,
          "name": "DynamoDB (On-Demand)",
        },
      ],
      "name": "Database",
      "total": {
        "max": 40,
        "min": 10,
      },
    },
    {
      "items": [
        {
          "desc": "Internet outbound, first 1GB free",
          "max": 20,
          "min": 5,
          "name": "Data Transfer (outbound)",
        },
      ],
      "name": "Network",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "Storage + requests + data transfer",
          "max": 20,
          "min": 5,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
      ],
      "name": "Storage",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "Included by default, detailed monitoring extra",
          "max": 30,
          "min": 10,
          "name": "CloudWatch (Logs + Metrics + Alarms)",
        },
      ],
      "name": "Operations",
      "total": {
        "max": 30,
        "min": 10,
      },
    },
  ],
  "hasCommit": false,
  "hasSpot": false,
  "totalMax": 145,
  "totalMid": 90,
  "totalMin": 35,
}
`;

exports[`estimateMonthlyCost snapshots > serverless (ko) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "1M+ 요청/월 기준 (첫 1M 무료)",
          "max": 15,
          "min": 0,
          "name": "Lambda 함수",
        },
        {
          "desc": "HTTP API 기준",
          "max": 20,
          "min": 5,
          "name": "API Gateway",
        },
      ],
      "name": "컴퓨팅",
      "total": {
        "max": 35,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "읽기/쓰기 요청 건당 과금",
          "max": 40,
          "min": 10,
          "name": "DynamoDB (On-Demand)",
        },
      ],
      "name": "데이터베이스",
      "total": {
        "max": 40,
        "min": 10,
      },
    },
    {
      "items": [
        {
          "desc": "인터넷 아웃바운드 첫 1GB 무료",
          "max": 20,
          "min": 5,
          "name": "데이터 전송 (outbound)",
        },
      ],
      "name": "네트워크",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "저장 + 요청 + 데이터 전송",
          "max": 20,
          "min": 5,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
      ],
      "name": "스토리지",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "기본 포함, 상세 모니터링 추가",
          "max": 30,
          "min": 10,
          "name": "CloudWatch (로그+메트릭+알람)",
        },
      ],
      "name": "운영",
      "total": {
        "max": 30,
        "min": 10,
      },
    },
  ],
  "hasCommit": false,
  "hasSpot": false,
  "totalMax": 145,
  "totalMid": 90,
  "totalMin": 35,
}
`;

exports[`estimateMonthlyCost snapshots > ticketing (en) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "2AZ, CPU/memory based",
          "max": 168,
          "min": 120,
          "name": "ECS Fargate (ARM64)",
        },
        {
          "desc": "Based on LCU",
          "max": 50,
          "min": 20,
          "name": "ALB (Application Load Balancer)",
        },
      ],
      "name": "Compute",
      "total": {
        "max": 218,
        "min": 140,
      },
    },
    {
      "items": [
        {
          "desc": "min 0.5 ~ max 8 ACU",
          "max": 200,
          "min": 120,
          "name": "Aurora Serverless v2",
        },
        {
          "desc": "Based on Aurora I/O-Optimized",
          "max": 60,
          "min": 20,
          "name": "Aurora Storage + I/O",
        },
        {
          "desc": "Billed per read/write request",
          "max": 40,
          "min": 10,
          "name": "DynamoDB (On-Demand)",
        },
        {
          "desc": "2AZ Replication Group",
          "max": 144,
          "min": 120,
          "name": "ElastiCache Valkey/Redis",
        },
      ],
      "name": "Database",
      "total": {
        "max": 444,
        "min": 270,
      },
    },
    {
      "items": [
        {
          "desc": "$0.059/hr + data processing charges",
          "max": 88,
          "min": 43,
          "name": "NAT Gateway (1)",
        },
        {
          "desc": "Internet outbound, first 1GB free",
          "max": 20,
          "min": 5,
          "name": "Data Transfer (outbound)",
        },
        {
          "desc": "4 Interface Endpoints ($7/each/mo)",
          "max": 40,
          "min": 28,
          "name": "VPC Interface Endpoints",
        },
      ],
      "name": "Network",
      "total": {
        "max": 148,
        "min": 76,
      },
    },
    {
      "items": [
        {
          "desc": "Data transfer + per-request charges",
          "max": 30,
          "min": 5,
          "name": "CloudFront",
        },
        {
          "desc": "$5/mo + rule/request charges",
          "max": 30,
          "min": 20,
          "name": "WAF Web ACL",
        },
        {
          "desc": "$10/mo + $1/1M requests",
          "max": 20,
          "min": 10,
          "name": "Bot Control",
        },
      ],
      "name": "Edge",
      "total": {
        "max": 80,
        "min": 35,
      },
    },
    {
      "items": [
        {
          "desc": "Storage + requests + data transfer",
          "max": 20,
          "min": 5,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
      ],
      "name": "Storage",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "First 1M free, then $0.4/1M",
          "max": 5,
          "min": 0,
          "name": "SQS",
        },
      ],
      "name": "Messaging",
      "total": {
        "max": 5,
        "min": 0,
      },
    },
    {
      "items": [
        {
          "desc": "Included by default, detailed monitoring extra",
          "max": 30,
          "min": 10,
          "name": "CloudWatch (Logs + Metrics + Alarms)",
        },
        {
          "desc": "Traces $5/1M, sampling config recommended",
          "max": 8,
          "min": 3,
          "name": "AWS X-Ray (Distributed Tracing)",
        },
        {
          "desc": "Compliance / sensitive data monitoring",
          "max": 200,
          "min": 80,
          "name": "Security Hub + GuardDuty + Config",
        },
        {
          "desc": "Event logging + queries",
          "max": 60,
          "min": 20,
          "name": "CloudTrail (S3 storage)",
        },
        {
          "desc": "Per key usage + $1/key/mo",
          "max": 30,
          "min": 10,
          "name": "KMS CMK (per service)",
        },
        {
          "desc": "First 50K MAU free, then $0.0055/MAU",
          "max": 0,
          "min": 0,
          "name": "Cognito User Pool",
        },
        {
          "desc": "$0.10/GB/mo image storage + scanning",
          "max": 5,
          "min": 1,
          "name": "ECR (Container Registry)",
        },
        {
          "desc": "$0.01/instance/hr",
          "max": 15,
          "min": 10,
          "name": "Inspector",
        },
        {
          "desc": "First 1GB free, then $1/GB",
          "max": 5,
          "min": 0,
          "name": "Macie",
        },
      ],
      "name": "Operations",
      "total": {
        "max": 353,
        "min": 134,
      },
    },
  ],
  "hasCommit": false,
  "hasSpot": false,
  "totalMax": 1268,
  "totalMid": 964,
  "totalMin": 660,
}
`;

exports[`estimateMonthlyCost snapshots > ticketing (ko) 1`] = `
{
  "categories": [
    {
      "items": [
        {
          "desc": "2AZ, CPU/메모리 기준",
          "max": 168,
          "min": 120,
          "name": "ECS Fargate (ARM64)",
        },
        {
          "desc": "LCU 기준",
          "max": 50,
          "min": 20,
          "name": "ALB (Application Load Balancer)",
        },
      ],
      "name": "컴퓨팅",
      "total": {
        "max": 218,
        "min": 140,
      },
    },
    {
      "items": [
        {
          "desc": "min 0.5 ~ max 8 ACU",
          "max": 200,
          "min": 120,
          "name": "Aurora Serverless v2",
        },
        {
          "desc": "Aurora I/O-Optimized 기준",
          "max": 60,
          "min": 20,
          "name": "Aurora 스토리지 + I/O",
        },
        {
          "desc": "읽기/쓰기 요청 건당 과금",
          "max": 40,
          "min": 10,
          "name": "DynamoDB (On-Demand)",
        },
        {
          "desc": "2AZ Replication Group",
          "max": 144,
          "min": 120,
          "name": "ElastiCache Valkey/Redis",
        },
      ],
      "name": "데이터베이스",
      "total": {
        "max": 444,
        "min": 270,
      },
    },
    {
      "items": [
        {
          "desc": "$0.059/시간 + 데이터 처리 비용",
          "max": 88,
          "min": 43,
          "name": "NAT Gateway (1개)",
        },
        {
          "desc": "인터넷 아웃바운드 첫 1GB 무료",
          "max": 20,
          "min": 5,
          "name": "데이터 전송 (outbound)",
        },
        {
          "desc": "Interface Endpoint 4개 ($7/개/월)",
          "max": 40,
          "min": 28,
          "name": "VPC Interface Endpoints",
        },
      ],
      "name": "네트워크",
      "total": {
        "max": 148,
        "min": 76,
      },
    },
    {
      "items": [
        {
          "desc": "데이터 전송 + 요청 건당",
          "max": 30,
          "min": 5,
          "name": "CloudFront",
        },
        {
          "desc": "$5/월 + 규칙/요청 비용",
          "max": 30,
          "min": 20,
          "name": "WAF Web ACL",
        },
        {
          "desc": "$10/월 + $1/1M 요청",
          "max": 20,
          "min": 10,
          "name": "Bot Control",
        },
      ],
      "name": "엣지",
      "total": {
        "max": 80,
        "min": 35,
      },
    },
    {
      "items": [
        {
          "desc": "저장 + 요청 + 데이터 전송",
          "max": 20,
          "min": 5,
          "name": "S3 (Standard + Intelligent-Tiering)",
        },
      ],
      "name": "스토리지",
      "total": {
        "max": 20,
        "min": 5,
      },
    },
    {
      "items": [
        {
          "desc": "첫 1M 무료, 이후 $0.4/1M",
          "max": 5,
          "min": 0,
          "name": "SQS",
        },
      ],
      "name": "메시징",
      "total": {
        "max": 5,
        "min": 0,
      },
    },
    {
      "items": [
        {
          "desc": "기본 포함, 상세 모니터링 추가",
          "max": 30,
          "min": 10,
          "name": "CloudWatch (로그+메트릭+알람)",
        },
        {
          "desc": "추적 $5/백만 건, 샘플링 설정 권장",
          "max": 8,
          "min": 3,
          "name": "AWS X-Ray (분산 추적)",
        },
        {
          "desc": "규정 준수 / 민감 데이터 모니터링",
          "max": 200,
          "min": 80,
          "name": "Security Hub + GuardDuty + Config",
        },
        {
          "desc": "이벤트 기록 + 쿼리",
          "max": 60,
          "min": 20,
          "name": "CloudTrail (S3 저장)",
        },
        {
          "desc": "키 사용 건당 + 월 $1/키",
          "max": 30,
          "min": 10,
          "name": "KMS CMK (서비스별)",
        },
        {
          "desc": "첫 50K MAU 무료, 이후 $0.0055/MAU",
          "max": 0,
          "min": 0,
          "name": "Cognito User Pool",
        },
        {
          "desc": "$0.10/GB/월 이미지 저장 + 스캔",
          "max": 5,
          "min": 1,
          "name": "ECR (컨테이너 레지스트리)",
        },
        {
          "desc": "인스턴스당 $0.01/시간",
          "max": 15,
          "min": 10,
          "name": "Inspector",
        },
        {
          "desc": "첫 1GB 무료, 이후 $1/GB",
          "max": 5,
          "min": 0,
          "name": "Macie",
        },
      ],
      "name": "운영",
      "total": {
        "max": 353,
        "min": 134,
      },
    },
  ],
  "hasCommit": false,
  "hasSpot": false,
  "totalMax": 1268,
  "totalMid": 964,
  "totalMin": 660,
}
`;
